# ssppy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/ssppy/: __init__.py  energy_functions.py  power_functions.py  reader_functions.py  shadow_functions.py  visibility_functions.py
tests/: test_ssppy.py
