[tool.poetry]
name = "ssppy"
version = "0.1.0"
description = "Compute energy potential of space solar power "
authors = ["Jack Mcnish"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
