[tool.poetry]
name = "ssppy"
version = "0.1.0"
description = "Compute energy potential of space solar power "
authors = ["Jack Mcnish"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.24.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
myst-nb = "^0.17.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.1", python = "<=3.9"}
sphinx-autoapi = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
